// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validate the fileReader > reading async files 'samples/cities.txt' 1`] = `
"New York
New Amsterdam
Las Angles
San Francisco
New Delhi
Mexico City
London
Paris
"
`;

exports[`Validate the fileReader > reading async files 'samples/cities.txt.gz' 1`] = `
"
# cspell-tools: keep-case no-split

Las Angles
London
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
~las angles
~london
~mexico city
~new amsterdam
~new delhi
~new york
~paris
~san francisco
"
`;

exports[`Validate the fileReader > reading async files 'samples/cities.utf16be.txt' 1`] = `
"New York
New Amsterdam
Las Angles
San Francisco
New Delhi
Mexico City
London
Paris
"
`;

exports[`Validate the fileReader > reading async files 'samples/cities.utf16le.txt' 1`] = `
"New York
New Amsterdam
Las Angles
San Francisco
New Delhi
Mexico City
London
Paris
"
`;
